/// https://www.prisma.io/docs/orm/reference/prisma-schema-reference
/// https://www.prisma.io/docs/orm/reference/prisma-schema-reference#generator
generator client {
  /// Default ab Prisma 6.18
  /// https://www.prisma.io/docs/orm/prisma-schema/overview/generators#output-splitting-and-importing-types
  /// https://www.prisma.io/blog/why-prisma-orm-generates-code-into-node-modules-and-why-it-ll-change
  /// https://www.prisma.io/blog/rust-free-prisma-orm-is-ready-for-production
  /// https://github.com/prisma/prisma/releases/tag/6.6.0
  /// https://github.com/prisma/prisma/releases/tag/6.16.0
  /// ESM-first
  provider            = "prisma-client"
  output              = "../src/generated/prisma"
  /// https://www.prisma.io/docs/orm/reference/preview-features/client-preview-features#currently-active-preview-features
  /// https://github.com/prisma/prisma/releases/tag/5.7.0
  previewFeatures     = ["nativeDistinct", "relationJoins"]
  engineType          = "client"
  /// https://github.com/prisma/prisma/releases/tag/7.3.0
  /// default: "fast"; alternativ: "small"
  /// compilerBuild = "fast"
  /// https://github.com/prisma/prisma/releases/tag/6.12.0
  // importFileExtension = "ts"
}

/// https://www.prisma.io/docs/orm/reference/prisma-schema-reference#datasource
datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
  schemas  = ["gebrauchtwagen"]
}

model Gebrauchtwagen {
  id                 Int               @id @default(autoincrement())
  version            Int               @default(1)
  fin                String            @unique
  marke              String
  modell             String
  baujahr            Int
  erstzulassung      DateTime          @db.Date
  kilometerstand     Int
  kraftstoffart      Kraftstoffart
  fahrzeugklasse     Fahrzeugklasse
  ausstattung        Json              @default("{}")
  schadenfrei        Boolean
  beschreibungUrl    String?           @map("beschreibung_url")
  anbieterUsername   String?           @map("anbieter_username")
  kontaktEmail       String?           @map("kontakt_email")
  erzeugt            DateTime          @default(now()) @db.Timestamp(6)
  aktualisiert       DateTime          @default(now()) @db.Timestamp(6) @updatedAt
  standort           Standort?
  schaeden           Schaden[]
  hauptuntersuchung  Hauptuntersuchung?

  @@map("gebrauchtwagen")
  @@schema("gebrauchtwagen")
}

model Standort {
  id                Int             @id @default(autoincrement())
  plz               String
  ort               String
  gebrauchtwagenId  Int             @unique @map("gebrauchtwagen_id")
  gebrauchtwagen    Gebrauchtwagen  @relation(fields: [gebrauchtwagenId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@index([gebrauchtwagenId])
  @@map("standort")
  @@schema("gebrauchtwagen")
}

model Schaden {
  id                  Int             @id @default(autoincrement())
  bezeichnung         String
  beschreibung        String
  feststellungsdatum  DateTime        @db.Date
  gebrauchtwagenId    Int             @map("gebrauchtwagen_id")
  gebrauchtwagen      Gebrauchtwagen  @relation(fields: [gebrauchtwagenId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@index([gebrauchtwagenId])
  @@map("schaden")
  @@schema("gebrauchtwagen")
}

model Hauptuntersuchung {
  id                  Int             @id @default(autoincrement())
  pruefdatum          DateTime        @db.Date
  gueltigBis          DateTime        @map("gueltig_bis") @db.Date
  prueforganisation   String
  status              HuStatus
  gebrauchtwagenId    Int             @unique @map("gebrauchtwagen_id")
  gebrauchtwagen      Gebrauchtwagen  @relation(fields: [gebrauchtwagenId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@index([gebrauchtwagenId])
  @@map("hauptuntersuchung")
  @@schema("gebrauchtwagen")
}

enum Kraftstoffart {
  BENZIN
  DIESEL
  ELEKTRO
  HYBRID
  ERDGAS
  WASSERSTOFF

  @@map("kraftstoffart")
  @@schema("gebrauchtwagen")
}

enum Fahrzeugklasse {
  KLEINWAGEN
  KOMPAKTKLASSE
  MITTELKLASSE
  OBERKLASSE
  SUV
  KOMBI
  CABRIO
  TRANSPORTER

  @@map("fahrzeugklasse")
  @@schema("gebrauchtwagen")
}

enum HuStatus {
  BESTANDEN
  NICHT_BESTANDEN
  AUSSTEHEND

  @@map("hu_status")
  @@schema("gebrauchtwagen")
}
